--- a/3-direction/style.css
+++ b/3-direction/style.css
@@ -1,42 +1,60 @@
 :root{
-    --bg-color: #2A2723;
+    --bg-color: black;
     --fg-color: red;
-    --text-color: #f2bea4;
-    --h1: 8rem;
-    --h2: 6rem;
-    --text-size: 3rem;
-    --spacing: 6rem;
+    --text-color: #b0b0b0;
+    --h1: 4rem;
+    --h2: 2rem;
+    --heading-color:white;
+    --text-size: 1rem;
+    --spacing: 3rem;
     --heading-type: "Bebas Neue", sans-serif;
     --body-type:"Courier Prime", monospace;
 }
 
+ em{
+        font-style: italic;
+    }
+
 body{
     background-color: var(--bg-color);
     color: var(--text-color);
-    padding: 3rem;
     font-size: var(--text-size);
     font-family: var(--body-type);
+    text-wrap: pretty;
 
-    *{
-        margin-bottom: var(--spacing);
-    }
+    header{
 
-    h1,h2{
-        font-size: var(--h1);
-        font-family: var(--heading-type);
-    }
+        h1,h2{
+            font-size: var(--h1);
+            font-family: var(--heading-type);
+            color: var(--heading-color);
+        }
+        
+        h1{
+            line-height: 110%;
+        }
     
-    h2{
-        font-size: var(--h2);
-    }
-    
-    nav>ol{
-        display: flex;
+        h2{
+            font-size: var(--h2);
+        }
+        
+        nav>ol{
+            display: flex;
+        }
+
     }
 
-    em{
-        font-style: italic;
+    main{
+        article{
+            padding: calc(var(--spacing)/2);
+
+            p{
+                line-height: 150%;
+            }
+        }
     }
+
+   
 
     
 }
